cros: Don't process events on app icons while the shelf is hidden.

2 bug fixes.
1. Fix swiping up on the auto-hidden shelf from interacting with
   ShelfButtons.
2. Prevent users from accidentally activating ShelfButtons by tapping
   the bottom of the screen while the shelf is autohidden.

Bug: 872854
Change-Id: I5376eac2b7090b6109ad28cb0e9dfc4a748343e6
Reviewed-on: https://chromium-review.googlesource.com/1198522
Commit-Queue: Alex Newcomer <newcomer@chromium.org>
Reviewed-by: Sammie Quon <sammiequon@chromium.org>
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#588101}
Former-commit-id: 8f1c1ed63cb9c8acc5617b049abba5874aecc0cc